--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "elasticsearch==8.0.0",
     "jupyter>=1.1.1",
     "minsearch>=0.0.2",
     "notebook>=7.4.3",
@@ -12,6 +13,7 @@ dependencies = [
     "pandas>=2.3.0",
     "python-dotenv>=1.1.0",
     "scikit-learn>=1.7.0",
+    "tiktoken>=0.9.0",
     "torch>=2.7.1",
     "transformers>=4.52.4",
 ]
