--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "openai>=1.86.0",
     "pandas>=2.3.0",
     "python-dotenv>=1.1.0",
+    "qdrant-client[fastembed]>=1.14.2",
     "scikit-learn>=1.7.0",
     "tiktoken>=0.9.0",
     "torch>=2.7.1",
